--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "discord.js": "^13.1.0",
     "hookcord": "^2.0.2",
     "webhook-discord": "^3.7.8"
+  },
+  "engines": {
+    "node": "16.9.0"
   }
 }
 
