--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js pm2-runtime start ecosystem.config.js --env production"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +16,8 @@
     "webhook-discord": "^3.7.8"
   },
   "engines": {
-    "node": "16.9.0"
+    "node": "16.9.0",
+    "pm2": ""
   }
 }
 
