--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,11 +13,11 @@
     "discord-webhook-node": "^1.1.8",
     "discord.js": "^13.1.0",
     "hookcord": "^2.0.2",
-    "webhook-discord": "^3.7.8",
-    "pm2": "5.1.1"
+    "webhook-discord": "^3.7.8"
   },
   "engines": {
-    "node": "16.9.0"
+    "node": "16.9.0",
+    "pm2": ""
   }
 }
 
